# SerializerSandbox

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  configure_cmake.bat  imgui.ini  vcpkg.json
Editor/: CMakeLists.txt
Editor/assets/: cube.gltf
Editor/src/: Editor.cpp  EditorCamera.h  EditorStyles.h  EditorUi.cpp  EditorUi.h  GameDll.cpp  GameDll.h  GameProject.cpp  GameProject.h  ScenePlayer.h
Engine/: CMakeLists.txt
Engine/Include/: Buffer.h  Common.h  Components.h  Entity.h  Renderer.h  Scene.h  SceneSerializer.h  ScriptRegistry.h  Shader.h
Engine/dependencies/glad/include/glad/: gl.h
Engine/src/: Buffer.cpp  Components.cpp  Entity.cpp  Renderer.cpp  Scene.cpp  SceneSerializer.cpp  ScriptRegistry.cpp  Shader.cpp
Engine/src/Platform/OpenGL/: BufferOpenGL.cpp  BufferOpenGL.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h
Game/: CMakeLists.txt
Game/Include/: Scripts.h
Game/src/: main.cpp
dependencies/glad/src/: gl.c
